2007-12-30  Torsten Rahn  <rahn@kde.org>

    - Fixed order of Feature appearance (still could
      have some fine tuning)
    - Changed QDataStream format to 4_2

    * src/lib/PlaceMarkLayout.cpp
    * src/lib/PlaceMarkContainer.cpp
    * src/lib/MarblePlacemarkModel.cpp
    * src/lib/PlaceMarkManager.cpp
    * src/lib/geodata/data/GeoDataFeature.cpp
    * data/placemarks/baseplacemarks.cache
    * data/placemarks/elevplacemarks.cache
    * data/placemarks/otherplacemarks.cache
    * data/placemarks/boundaryplacemarks.cache
    * data/placemarks/cityplacemarks.cache

2007-12-29  Torsten Rahn  <rahn@kde.org>

    Instead of saving VisualCategories, Popularity and
    PopularityIndex we create them on the fly.
    Reduces file size and reduces my headaches a bit. 

    * src/lib/MarblePlacemarkModel.h
    * src/lib/XmlHandler.cpp
    * src/lib/MarblePlacemarkModel.cpp
    * src/lib/PlaceMarkManager.cpp
    * src/lib/VectorMap.cpp
    * src/lib/XmlHandler.h
    * src/lib/GeoPolygon.cpp
    * data/placemarks/baseplacemarks.cache
    * data/placemarks/elevplacemarks.cache
    * data/placemarks/otherplacemarks.cache
    * data/placemarks/boundaryplacemarks.cache
    * data/placemarks/cityplacemarks.cache

2007-12-28  Inge Wallin  <inge@lysator.liu.se>

	Save projection too in KDE version.
	* src/marble.kcfg: Added projection to variables.
	* src/marble_part.cpp (writeSettings): Write projection
	(readSettings): read projection

	Fix includes so that using the widget from an external program
	works again.
	* src/CMakeLists.txt: Add AbstractLayer and geodata/data as
	include directories
	* src/lib/CMakeLists.txt:
	 - Add AbstractLayer and geodata/data as include directories
	 - Install plenty more include files.
	* src/lib/AbstractLayer/AbstractLayer.h,
	* src/lib/AbstractLayer/AbstractLayerData.h,
	* src/lib/AbstractLayer/AbstractLayerInterface.h,
	* src/lib/AbstractScanlineTextureMapper.h,
	* src/lib/GridMap.cpp,
	* src/lib/KMLFileViewItem.cpp,